--- a/templates/model_scenario_ASLFN.html
+++ b/templates/model_scenario_ASLFN.html
@@ -380,7 +380,10 @@
                     <option value="EU">EU</option>
                     <option value="EU_LG">EU_LG</option>
                     <option value="EU_LG_UA">EU_LG_UA</option>
-                    <option value="External">External</option>
+                    <!-- <option value="matching-ramsay">matching-ramsay</option> -->
+                    {% for modules in developer_matching %}
+                    <option value= "{{modules}}" SELECTED>{{modules}}</option>
+                    {% endfor %}
                     <option value="Disabled" SELECTED>Disabled</option>
                   </select>
                   <label for="select_matchingRule">Matching rule</label>
@@ -515,7 +518,10 @@
                         <option value="ri_mbo">ri_mbo</option>
                         <option value="bi_sbo">bi_sbo</option>
                         <option value="bi_mbo">bi_mbo</option>
-                        <option value="External">External</option>
+                        <!-- <option value="cramming-ramsay">cramming-ramsay</option> -->
+                        {% for modules in developer_cramming %}
+                        <option value= "{{modules}}" SELECTED>{{modules}}</option>
+                        {% endfor %}
                         <option value="Disabled" SELECTED>Disabled</option>
                       </select>
                       <label for="select_crammingRule">Cramming rule</label>
@@ -565,7 +571,10 @@
                         <option value="ri_mbo">ri_mbo</option>
                         <option value="bi_sbo">bi_sbo</option>
                         <option value="bi_mbo">bi_mbo</option>
-                        <option value="External">External</option>
+                        <!-- <option value="reorganizing-ramsay">reorganizing-ramsay</option> -->
+                        {% for modules in developer_reorganizing %}
+                        <option value= "{{modules}}" SELECTED>{{modules}}</option>
+                        {% endfor %}
                         <option value="Disabled" SELECTED>Disabled</option>
                       </select>
                       <label for="select_reorganizingRule">Reorganizing rule</label>
