--- a/templates/develop.html
+++ b/templates/develop.html
@@ -110,30 +110,31 @@
       </header>
 
       <div class="row align-items-md-stretch p-3">
-        <div class="col-md-6">
+        <div class="col-md-12">
 
           <div class="p-5 mb-4 bg-light rounded-3">
             <div class="container-fluid py-5">
-              <h1 class="display-5 fw-bold">Developing...</h1>
-              <p class="col-md-8 fs-4">Developing...</p>
-              <!-- <button class="btn btn-primary btn-lg" type="button"
-                onclick="window.location.href='/pipeline/platform';">Try it!</button> -->
+              <p class="display-6 fw-bold">Matching
+                <button class="btn btn-primary btn-lg" type="button"
+                onclick="window.location.href='/pipeline/develop/matching';">Download</button>
+                <button class="btn btn-primary btn-lg" type="button"
+                onclick="window.location.href='/pipeline/platform';">Upload</button>
+              </p>
+              <p class="display-6 fw-bold">Cramming
+                <button class="btn btn-primary btn-lg" type="button"
+                onclick="window.location.href='/pipeline/develop/cramming';">Download</button>
+                <button class="btn btn-primary btn-lg" type="button"
+                onclick="window.location.href='/pipeline/platform';">Upload</button>
+              </p>
+              <p class="display-6 fw-bold">Reorganizing
+                <button class="btn btn-primary btn-lg" type="button"
+                onclick="window.location.href='/pipeline/develop/reorganizing';">Download</button>
+                <button class="btn btn-primary btn-lg" type="button"
+                onclick="window.location.href='/pipeline/platform';">Upload</button>
+              </p>
             </div>
           </div>
 
-        </div>
-
-        <div class="col-md-6">
-
-          <div class="p-5 mb-4 bg-dark rounded-3">
-            <div class="container-fluid text-white bg-dark py-5">
-              <h1 class="display-5 fw-bold">Developing...</h1>
-              <p class="col-md-8 fs-4">Developing...</p>
-              <!-- <button class="btn btn-primary btn-lg" type="button"
-                onclick="window.location.href='https:\/\/www.google.com/'">Try
-                it!</button> -->
-            </div>
-          </div>
         </div>
       </div>
 
