--- a/templates/develop.html
+++ b/templates/develop.html
@@ -110,30 +110,67 @@
       </header>
 
       <div class="row align-items-md-stretch p-3">
-        <div class="col-md-12">
+        <div class="col-md-6">
 
           <div class="p-5 mb-4 bg-light rounded-3">
             <div class="container-fluid py-5">
-              <p class="display-6 fw-bold">Matching
+              <label class="col-md-12 fs-2 fw-bold" Align="center">Download module templates</label>
+              
+              <br><br>
+              <p class="display-6 fw-bold" Align="center">
                 <button class="btn btn-primary btn-lg" type="button"
-                onclick="window.location.href='/pipeline/develop/matching';">Download</button>
-                <button class="btn btn-primary btn-lg" type="button"
-                onclick="window.location.href='/pipeline/platform';">Upload</button>
+                onclick="window.location.href='/pipeline/develop/matching';">Matching</button>
               </p>
-              <p class="display-6 fw-bold">Cramming
+
+              <p class="display-6 fw-bold" Align="center">
                 <button class="btn btn-primary btn-lg" type="button"
-                onclick="window.location.href='/pipeline/develop/cramming';">Download</button>
-                <button class="btn btn-primary btn-lg" type="button"
-                onclick="window.location.href='/pipeline/platform';">Upload</button>
+                onclick="window.location.href='/pipeline/develop/cramming';">Cramming</button>
               </p>
-              <p class="display-6 fw-bold">Reorganizing
+
+              <p class="display-6 fw-bold" Align="center">
                 <button class="btn btn-primary btn-lg" type="button"
-                onclick="window.location.href='/pipeline/develop/reorganizing';">Download</button>
-                <button class="btn btn-primary btn-lg" type="button"
-                onclick="window.location.href='/pipeline/platform';">Upload</button>
+                onclick="window.location.href='/pipeline/develop/reorganizing';">Reorganizing</button>
               </p>
             </div>
           </div>
+
+        </div>
+
+        <div class="col-md-6">
+
+          <div class="p-5 mb-4 bg-light rounded-3">
+            <div class="container-fluid py-5">
+
+              <form action="/pipeline/develop" method="post" enctype="multipart/form-data">
+
+                <label class="col-md-12 fs-2 fw-bold" Align="center">Upload your module</label>
+                
+                <br><br>
+                <p class="display-6 fw-bold" Align="center">
+                  <label for="module_matching" class="btn btn-primary btn-lg">Matching</label>
+                  <input type="file" id="module_matching" name="uploaded_module_matching" hidden>
+                </p>
+
+                <p class="display-6 fw-bold" Align="center">
+                  <label for="module_cramming" class="btn btn-primary btn-lg">Cramming</label>
+                  <input type="file" id="module_cramming" name="uploaded_module_cramming" hidden>
+                </p>
+
+                <p class="display-6 fw-bold" Align="center">
+                  <label for="module_reorganizing" class="btn btn-primary btn-lg">Reorganizing</label>
+                  <input type="file" id="module_reorganizing" name="uploaded_module_reorganizing" hidden>
+                </p>
+                
+                <p class="display-6 fw-bold" Align="center">
+                  <label for="save_data" class="btn btn-outline-primary btn-lg">Submit</label>
+                  <input type="submit" id="save_data" class="btn btn-outline-primary btn-lg" hidden>
+                </p>
+
+              </form>
+            </div>
+          </div>
+
+          
 
         </div>
       </div>
