--- a/templates/service.html
+++ b/templates/service.html
@@ -137,7 +137,7 @@
         <div class="container-fluid py-0">
           <h1 class="display-6 fw-bold">Service</h1>
           <br><br>
-          <p class="col-md-12 fs-6">Artificial intelligence as a service (AIaaS) is 
+          <p class="col-md-12 fs-6">Prediction service is 
             defined as a service that outsources AI to enable individuals and companies 
             to explore and scale AI techniques at a minimal cost.</p>
 
