--- a/templates/model_scenario_ASLFN.html
+++ b/templates/model_scenario_ASLFN.html
@@ -213,7 +213,7 @@
                   for training model.
                 </p>
                 <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="floatingInput" placeholder="10" name="hiddenNode">
+                  <input type="text" class="form-control" id="floatingInput" placeholder="10" name="hiddenNode" value="10">
                   <label for="floatingInput">Hidden layer node</label>
                 </div>
 
@@ -325,7 +325,7 @@
                 </p>
 
                 <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="floatingInput" placeholder="10" name="learningRate">
+                  <input type="text" class="form-control" id="floatingInput" placeholder="10" name="learningRate" value="0.001">
                   <label for="floatingInput">Learning rate</label>
                 </div>
 
@@ -334,7 +334,7 @@
                 </p>
 
                 <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="floatingInput" placeholder="10" name="betas">
+                  <input type="text" class="form-control" id="floatingInput" placeholder="10" name="betas" value="(0.9, 0.999)">
                   <label for="floatingInput">Betas</label>
                 </div>
 
@@ -343,7 +343,7 @@
                 </p>
 
                 <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="floatingInput" placeholder="10" name="eps">
+                  <input type="text" class="form-control" id="floatingInput" placeholder="10" name="eps" value="1e-08">
                   <label for="floatingInput">Eps</label>
                 </div>
 
@@ -352,7 +352,7 @@
                 </p>
 
                 <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="floatingInput" placeholder="10" name="weightDecay">
+                  <input type="text" class="form-control" id="floatingInput" placeholder="10" name="weightDecay" value="0.01">
                   <label for="floatingInput">Weight decay</label>
                 </div>
 
@@ -392,7 +392,7 @@
                 <!-- <p class="col-md-12 fs-6">13. (文獻回顧後更新)</p> -->
                 <div class="form-floating mb-3" id="p_matchingTimes" style="display:none;margin:0;">
                   <input type="text" class="form-control" id="matchingTimes" placeholder="10" name="matchingTimes"
-                    onchange="commonTuningTimes(this.value)">
+                    onchange="commonTuningTimes(this.value)" value="50">
                   <label for="matchingTimes">Matching times</label>
                 </div>
 
@@ -401,7 +401,7 @@
                 <div class="form-floating mb-3" id="p_matchingLearningGoal" style="display:none;margin:0;">
 
                   <input type="text" class="form-control" id="matchingLearningGoal" placeholder="10"
-                    name="matchingLearningGoal" onchange="commonLearningGoal(this.value)">
+                    name="matchingLearningGoal" onchange="commonLearningGoal(this.value)" value="0.5">
                   <label for="matchingLearningGoal">Matching learning goal</label>
                 </div>
 
@@ -410,7 +410,7 @@
                 <div class="form-floating mb-3" id="p_matchingLearningRateLowerBound" style="display:none;margin:0;">
 
                   <input type="text" class="form-control" id="matchingLearningRateLowerBound" placeholder="10"
-                    name="matchingLearningRateLowerBound" onchange="commonLearningRateLowerBound(this.value)">
+                    name="matchingLearningRateLowerBound" onchange="commonLearningRateLowerBound(this.value)" value="0.001">
                   <label for="matchingLearningRateLowerBound">Matching learning rate lower bound</label>
                 </div>
 
@@ -444,7 +444,7 @@
                   </p> -->
                   <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="floatingInput" placeholder="10"
-                      name="initializingNumber">
+                      name="initializingNumber" value="10">
                     <label for="floatingInput">Initializing number</label>
                   </div>
 
@@ -453,7 +453,7 @@
                   <div class="form-floating mb-3">
 
                     <input type="text" class="form-control" id="learningGoal" placeholder="10" name="learningGoal"
-                      onchange="commonLearningGoal(this.value)">
+                      onchange="commonLearningGoal(this.value)" value="0.5">
                     <label for="learningGoal">Learning goal</label>
                   </div>
                 </div>
@@ -582,7 +582,7 @@
                       </p> -->
                       <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="regularizingTimes" placeholder="10"
-                          name="regularizingTimes">
+                          name="regularizingTimes" value="50">
                         <label for="regularizingTimes">Regularizing times</label>
                       </div>
 
@@ -591,7 +591,7 @@
                       <div class="form-floating mb-3">
 
                         <input type="text" class="form-control" id="floatingInput" placeholder="10"
-                          name="regularizingStrength">
+                          name="regularizingStrength" value="0.001">
                         <label for="floatingInput">Regularizing strength</label>
                       </div>
 
@@ -600,7 +600,7 @@
                       <div class="form-floating mb-3">
 
                         <input type="text" class="form-control" id="regularizingLearningGoal" placeholder="10"
-                          name="regularizingLearningGoal">
+                          name="regularizingLearningGoal" value="0.5">
                         <label for="regularizingLearningGoal">Regularizing learning goal</label>
                       </div>
 
@@ -609,7 +609,7 @@
                       <div class="form-floating mb-3">
 
                         <input type="text" class="form-control" id="regularizingLearningRateLowerBound" placeholder="10"
-                          name="regularizingLearningRateLowerBound">
+                          name="regularizingLearningRateLowerBound" value="0.001">
                         <label for="regularizingLearningRateLowerBound">Regularizing learning rate lower bound</label>
                       </div>
                     </div>
@@ -621,9 +621,9 @@
             <br><br>
 
             <label class="col-md-8 fs-5"></label>
-            <label for="define_model" class="btn btn-outline-primary btn-lg">Train</label>
-            <input class="form-control-sm" type="submit" id="define_model" class="btn btn-outline-primary btn-lg"
-              formaction="/pipeline/model/scenario/ASLFN" hidden>
+            <label for="model_training" class="btn btn-outline-primary btn-lg">Train</label>
+            <input class="form-control-sm" type="submit" id="model_training" class="btn btn-outline-primary btn-lg"
+              formaction="/pipeline/model/scenario/ASLFN" onclick="checkFields(event);" hidden>
             <br><br>
 
 
@@ -758,6 +758,27 @@
 
       </div>
     </div>
+
+    <script type="text/javascript">
+  
+      function checkFields(event) {
+        const inputs = document.querySelectorAll('input[type="text"]');
+        console.log(inputs);
+
+        let alertShown = false;
+        for (let i = 0; i < inputs.length; i++) {
+
+          if (inputs[i].value === "") {
+            alert('Please fill out all fields');
+            event.preventDefault(); // prevent form submission
+            return;
+          }
+          
+        }
+        alert('The model is training!');
+      }
+
+    </script>
 
     <footer class="pt-3 mt-4 text-muted border-top">
       © 2022
