--- a/templates/model_scenario_ASLFN.html
+++ b/templates/model_scenario_ASLFN.html
@@ -376,7 +376,7 @@
 
                 <div class="form-floating mb-3">
                   <select class="form-select" id="select_matchingRule" placeholder="10" name="matchingRule"
-                    method="GET" style="font-size:15px;" onclick="showMatchingParameters()">
+                    method="GET" style="font-size:15px;" > <!-- onclick="showMatchingParameters()" -->
                     <!-- <option value="EU">EU</option>
                     <option value="EU_LG">EU_LG</option> -->
                     <option value="EU_LG_UA">EU_LG_UA</option>
@@ -390,7 +390,7 @@
                 </div>
                 
                 <!-- <p class="col-md-12 fs-6">13. (文獻回顧後更新)</p> -->
-                <div class="form-floating mb-3" id="p_matchingTimes" style="display:none;margin:0;">
+                <div class="form-floating mb-3" id="p_matchingTimes" > <!-- style="display:none;margin:0;" -->
                   <input type="text" class="form-control" id="matchingTimes" placeholder="10" name="matchingTimes"
                     onchange="commonTuningTimes(this.value)" value="50">
                   <label for="matchingTimes">Matching times</label>
@@ -398,7 +398,7 @@
 
                 <!-- <p class="col-md-12 fs-6">14. (文獻回顧後更新)
                 </p> -->
-                <div class="form-floating mb-3" id="p_matchingLearningGoal" style="display:none;margin:0;">
+                <div class="form-floating mb-3" id="p_matchingLearningGoal" > <!-- style="display:none;margin:0;" -->
 
                   <input type="text" class="form-control" id="matchingLearningGoal" placeholder="10"
                     name="matchingLearningGoal" onchange="commonLearningGoal(this.value)" value="0.5">
@@ -407,7 +407,7 @@
 
                 <!-- <p class="col-md-12 fs-6">15. (文獻回顧後更新)
                 </p> -->
-                <div class="form-floating mb-3" id="p_matchingLearningRateLowerBound" style="display:none;margin:0;">
+                <div class="form-floating mb-3" id="p_matchingLearningRateLowerBound" > <!-- style="display:none;margin:0;" -->
 
                   <input type="text" class="form-control" id="matchingLearningRateLowerBound" placeholder="10"
                     name="matchingLearningRateLowerBound" onchange="commonLearningRateLowerBound(this.value)" value="0.001">
@@ -433,13 +433,14 @@
 
                 <div class="form-floating mb-3">
                   <select class="form-select" id="select_initializingRule" placeholder="10" name="initializingRule"
-                    method="GET" style="font-size:15px;" onclick="showInitializingParameters()">
+                    method="GET" style="font-size:15px;" > <!-- onclick="showInitializingParameters()" -->
+                    
                     <option value="LinearRegression">LinearRegression</option>
                   </select>
                   <label for="select_initializingRule">Initializing rule</label>
                 </div>
-
-                <div id="regressionParameters" style="display:none;margin:0;">
+                
+                <div id="regressionParameters" > <!-- style="display:none;margin:0;" -->
                   <!-- <p class="col-md-12 fs-6">17. (文獻回顧後更新)
                   </p> -->
                   <div class="form-floating mb-3">
@@ -558,7 +559,7 @@
                     </p> -->
                     <div class="form-floating mb-3">
                       <select class="form-select" id="select_reorganizingRule" placeholder="10" name="reorganizingRule"
-                        method="GET" style="font-size:15px;" onclick="showReorganzingingParameters()">
+                        method="GET" style="font-size:15px;" > <!-- onclick="showReorganzingingParameters()" -->
                         <option value="ri_sro">ri_sro</option>
                         <!-- <option value="ri_mro">ri_mro</option>
                         <option value="bi_sro">bi_sro</option>
@@ -575,9 +576,9 @@
                       </select>
                       <label for="select_reorganizingRule">Reorganizing rule</label>
                     </div>
+                    
 
-
-                    <div id="reorganizingParamaters" style="display:none;margin:0;">
+                    <div id="reorganizingParamaters" > <!-- style="display:none;margin:0;" -->
                       <!-- <p class="col-md-12 fs-6">22. (文獻回顧後更新)
                       </p> -->
                       <div class="form-floating mb-3">
