--- a/templates/data.html
+++ b/templates/data.html
@@ -172,14 +172,31 @@
                     <p class="col-md-12 fs-6">3. The independent variable(X) is the cause. Its 
                       value is independent of other variables in your study.
                     </p>
-                    <label for="data_x" class="btn btn-outline-primary btn-lg">Select csv file  with header for independent variable(X)</label>
-                    <input type="file" id="data_x" name="file_x" hidden>
+                    <!-- <label for="data_x" class="btn btn-outline-primary btn-lg">Select csv file  with header for independent variable(X)</label>
+                    <input type="file" id="data_x" name="file_x" hidden> -->
+
+                    <p class="display-6 fw-bold" Align="center">
+                      <div class="mb-3" Align="center">
+                        <label for="data_x" class="form-label">Select csv file with header for independent variable(X)</label>
+                        <input class="form-control" type="file" id="data_x" name="file_x">
+                      </div>
+                    </p>
+
+                    
                     <br><br>
                     <p class="col-md-12 fs-6">4. The dependent variable(Y) is the effect. Its 
                       value depends on changes in the independent variable(X).
                     </p>
-                    <label for="data_y" class="btn btn-outline-primary btn-lg">Select csv file  with header for dependent variable(Y)</label>
-                    <input type="file" id="data_y" name="file_y" hidden>
+                    <!-- <label for="data_y" class="btn btn-outline-primary btn-lg">Select csv file  with header for dependent variable(Y)</label>
+                    <input type="file" id="data_y" name="file_y" hidden> -->
+
+                    <p class="display-6 fw-bold" Align="center">
+                      <div class="mb-3" Align="center">
+                        <label for="data_y" class="form-label">Select csv file  with header for dependent variable(Y)</label>
+                        <input class="form-control" type="file" id="data_y" name="file_y">
+                      </div>
+                    </p>
+
                     <br>
                   </div>
 
@@ -191,27 +208,28 @@
 
             <label class="col-md-8 fs-5"></label>
             <label for="save_data" class="btn btn-outline-primary btn-lg">Upload</label>
-            <input type="submit" id="save_data" class="btn btn-outline-primary btn-lg" hidden>
+            <input type="submit" id="save_data" class="btn btn-outline-primary btn-lg" formaction="/pipeline/data" 
+                  onclick="checkFields(event); checkFileInputs(event);" hidden>
 
             <br><br>
 
-            <div class="col-md-12">
-              <div class="h-100 p-5 bg-light border rounded-3">
-                <text>Independent variable(X) csv file : <font color="blue"><b>{{filename_x}}</b></font></text>
-                <br>
-                <text>Dependent variable(Y) csv file : <font color="blue"><b>{{filename_y}}</b></font></text>
-                <br>
-                <text>Data subject : <font color="blue"><b>{{directory}}</b></font></text>
-              </div>
-            </div>
-
           </form>
+
+          <div class="col-md-12">
+            <div class="h-100 p-5 bg-light border rounded-3">
+              <text>Independent variable(X) csv file : <font color="blue"><b>{{filename_x}}</b></font></text>
+              <br>
+              <text>Dependent variable(Y) csv file : <font color="blue"><b>{{filename_y}}</b></font></text>
+              <br>
+              <text>Data subject : <font color="blue"><b>{{directory}}</b></font></text>
+            </div>
+          </div>
 
           <br>
 
           <label class="col-md-8 fs-3"></label>
-          <label class="btn btn-outline-primary btn-lg" onclick="window.location.href='/pipeline/model';">Model Pipeline</label>
-          <label class="btn btn-outline-primary btn-lg" onclick="window.location.href='/pipeline/service';">Service Pipeline</label>
+          <label class="btn btn-outline-primary btn-lg" onclick="window.location.href='/pipeline/model';">Model pipeline</label>
+          <label class="btn btn-outline-primary btn-lg" onclick="window.location.href='/pipeline/service';">Prediction service</label>
 
           <br><br>
 
@@ -249,6 +267,34 @@
 
         </div>
       </div>
+
+      <script type="text/javascript">
+        function checkFileInputs(event) {
+          let fileInputs = document.querySelectorAll('input[type="file"]');
+          console.log(fileInputs);
+          for (let i = 0; i < fileInputs.length; i++) {
+            if (fileInputs[i].value === '') {
+              alert('At least one file input does not have a file selected');
+              event.preventDefault(); // prevent form submission
+              return;
+            }
+          }
+          alert('All file inputs have a file selected');
+        }
+        function checkInputs(event) {
+          let textInputs = document.querySelectorAll('input[type="text"]');
+          console.log(textInputs);
+          textInputs.forEach(input => {
+            if (input.value.trim() === '') {
+              alert('Please fill out all fields');
+              event.preventDefault(); // prevent form submission
+              return;
+            }
+          });
+          alert('The dataset is uploading');
+        }
+        
+      </script>
 
       <footer class="pt-3 mt-4 text-muted border-top">
         © 2022
